# inbox-triage

./: .gitignore  .replit  Dockerfile  README.md  app.py  app_production.py  app_replit.py  deploy.sh  docker-compose.yml  gmail_assistant.py  gunicorn.conf.py  install_replit.sh  nginx.conf  pyproject.toml  replit.nix  requirements.txt  requirements_production.txt  test_app.py
templates/: index.html
