[tool.poetry]
name = "inbox-triage"
version = "0.1.0"
description = "An intelligent email management system using ML clustering"
authors = ["Krishna <krishna@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.1.1"
google-api-python-client = "^2.179.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
scikit-learn = "^1.7.1"
pandas = "^2.3.1"
numpy = "^2.3.2"
scipy = "^1.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
